fix(steam): check game list visibility in addition to profile visibility
communityvisibilitystate only indicates profile visibility, but Steam
allows hiding the game list even on a public profile. Added a call to
GetOwnedGames — if it returns {"response":{}} the games are inaccessible
and the profile is considered private for game detection purposes.