@@ -22,6 +22,8 @@ public class RealSteamApiClient implements SteamApiClient {
 
     private static final String PLAYER_SUMMARIES_URL =
         "https://api.steampowered.com/ISteamUser/GetPlayerSummaries/v0002/";
+    private static final String OWNED_GAMES_URL =
+        "https://api.steampowered.com/IPlayerService/GetOwnedGames/v0001/";
 
     @Value("${steam.api-key:}")
     private String steamApiKey;
@@ -40,12 +42,39 @@ public class RealSteamApiClient implements SteamApiClient {
 
     @Override
     public boolean isProfilePublic(String steamId) {
-        return fetchPlayer(steamId)
+        boolean visibilityPublic = fetchPlayer(steamId)
             .map(player -> {
                 Object visibility = player.get("communityvisibilitystate");
                 return visibility != null && ((Number) visibility).intValue() == 3;
             })
             .orElse(false);
+        if (!visibilityPublic) return false;
+        return isGameListVisible(steamId);
+    }
+
+    @SuppressWarnings("unchecked")
+    private boolean isGameListVisible(String steamId) {
+        if (steamApiKey.isBlank()) return false;
+
+        String url = UriComponentsBuilder
+            .fromUriString(OWNED_GAMES_URL)
+            .queryParam("key", steamApiKey)
+            .queryParam("steamid", steamId)
+            .toUriString();
+
+        try {
+            Map<String, Object> response = restClient.get()
+                .uri(url)
+                .retrieve()
+                .body(Map.class);
+            if (response == null) return false;
+
+            Map<String, Object> responseBody = (Map<String, Object>) response.get("response");
+            return responseBody != null && responseBody.containsKey("game_count");
+        } catch (Exception e) {
+            log.warn("Failed to check Steam game list visibility for {}: {}", steamId, e.getMessage());
+            return false;
+        }
     }
 
     @SuppressWarnings("unchecked")
@@ -71,7 +100,7 @@ public class RealSteamApiClient implements SteamApiClient {
             List<Map<String, Object>> players = (List<Map<String, Object>>) responseBody.get("players");
             if (players == null || players.isEmpty()) return Optional.empty();
 
-            return Optional.of(players.get(0));
+            return Optional.of(players.getFirst());
         } catch (Exception e) {
             log.warn("Failed to fetch Steam player data for {}: {}", steamId, e.getMessage());
             return Optional.empty();
